# services/dungeon/swagger.yaml
@@ -45,6 +45,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DungeonRun'
+        409:
+          description: Dungeon run already in progress for this hero
 
   /dungeons/{runId}:
     get:
@@ -114,6 +116,8 @@ components:
 
     StartDungeonRequest:
       type: object
+      required:
+        - heroId
       properties:
         heroId:
           type: string
